--- a/Suites/report.html
+++ b/Suites/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,55934],[],[[5,0,0,[],[1,240,55692],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,23450],[],[[5,0,0,[],[1,249,23199],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Booking","*C:\\Users\\Wahyu Nugraha\\Documents\\mobile\\Mobileflightapp\\suites\\booking.robot","*booking.robot","*<p>booking testcase\x3c/p>","*user should be able to booking in Application"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*C:\\Users\\Wahyu Nugraha\\Documents\\mobile\\Mobileautomationflightapp\\suites\\login.robot","*login.robot","*<p>Login testcase\x3c/p>","*user login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:56","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Booking","name":"Booking","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657128881826;
+window.output["baseMillis"] = 1657707311107;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 55961;
+window.output["generated"] = 23469;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
