--- a/Suites/report.html
+++ b/Suites/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,23450],[],[[5,0,0,[],[1,249,23199],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,27462],[],[[5,0,0,[],[1,202,27259],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*C:\\Users\\Wahyu Nugraha\\Documents\\mobile\\Mobileautomationflightapp\\suites\\login.robot","*login.robot","*<p>Login testcase\x3c/p>","*user login"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Booking","*D:\\Automation\\mobile\\Mobileautomationflightapp\\Suites\\booking.robot","*booking.robot","*<p>booking testcase\x3c/p>","*user should be able to booking in Application"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Booking","name":"Booking","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657707311107;
+window.output["baseMillis"] = 1658051660599;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23469;
+window.output["generated"] = 27480;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
